k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinemaplex-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: cinemaplex.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cinemaplex-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cinemaplex-backend
                port:
                  number: 3001
          - path: /process
            pathType: Prefix
            backend:
              service:
                name: cinemaplex-video-processor
                port:
                  number: 5001
